add avatar update to v8.0.6

--- a/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList2.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList2.razor
@@ -1,16 +1,16 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
-        <MduiListAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
         <MduiListContent>Inbox</MduiListContent>
         <MduiCheckbox Value />
     </MduiListItem>
     <MduiListItem>
-        <MduiListAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
         <MduiListContent>Outbox</MduiListContent>
         <MduiCheckbox Value="@false" />
     </MduiListItem>
     <MduiListItem>
-        <MduiListAvatar />
+        <MduiAvatar />
         <MduiListContent>Trash</MduiListContent>
         <MduiCheckbox Value />
     </MduiListItem>
