--- a/MduiBlazor.Shared/Pages/Examples/Lists/DenseDividerList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/DenseDividerList.razor
@@ -1,6 +1,6 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
-        <MduiListAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
         <MduiListContent Title="Brendan Lim" TextLineSpan="@ListItemLineSpan.One">
             You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
             sleep. Other travelling salesmen live a life of luxury.
@@ -8,7 +8,7 @@
     </MduiListItem>
     <MduiDivider Inset Class="mdui-m-y-0" />
      <MduiListItem>
-         <MduiListAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
+         <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
          <MduiListContent Title="me, Scott, Jennifer" TextLineSpan="@ListItemLineSpan.One">
              You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
              sleep. Other travelling salesmen live a life of luxury.
@@ -16,7 +16,7 @@
      </MduiListItem>
      <MduiDivider Inset Class="mdui-m-y-0" />
      <MduiListItem>
-         <MduiListAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
+         <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
          <MduiListContent Title="me, Grace Ng" TextLineSpan="@ListItemLineSpan.One">
              You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
              sleep. Other travelling salesmen live a life of luxury.
