--- a/MduiBlazor.Shared/Pages/Examples/Lists/FilesList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/FilesList.razor
@@ -1,27 +1,27 @@
 <MduiList Style="max-width:480px;">
     <MduiSubheader Inset>Folders</MduiSubheader>
     <MduiListItem>
-        <MduiListAvatar>
+        <MduiAvatar>
             <MduiIcon Icon="folder" />
-        </MduiListAvatar>
+        </MduiAvatar>
         <MduiListContent Title="Photos">
             Jan 9, 2014
         </MduiListContent>
         <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiListItem>
-        <MduiListAvatar>
+        <MduiAvatar>
             <MduiIcon Icon="folder" />
-        </MduiListAvatar>
+        </MduiAvatar>
         <MduiListContent Title="Recipes">
             Jan 17, 2014
         </MduiListContent>
         <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiListItem>
-        <MduiListAvatar>
+        <MduiAvatar>
             <MduiIcon Icon="folder" />
-        </MduiListAvatar>
+        </MduiAvatar>
         <MduiListContent Title="Work">
             Jan 28, 2014
         </MduiListContent>
@@ -29,18 +29,18 @@
     </MduiListItem>
     <MduiSubheader Inset>Files</MduiSubheader>
     <MduiListItem>
-        <MduiListAvatar Class="mdui-color-blue mdui-text-color-white">
+        <MduiAvatar Class="mdui-color-blue mdui-text-color-white">
             <MduiIcon Icon="assignment" />
-        </MduiListAvatar>
+        </MduiAvatar>
         <MduiListContent Title="Photos">
             Jan 9, 2014
         </MduiListContent>
         <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiListItem>
-        <MduiListAvatar Class="mdui-color-yellow-600 mdui-text-color-white">
+        <MduiAvatar Class="mdui-color-yellow-600 mdui-text-color-white">
             <MduiIcon Icon="assignment" />
-        </MduiListAvatar>
+        </MduiAvatar>
         <MduiListContent Title="Kitchen remodel">
             Jan 10, 2014
         </MduiListContent>
