--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -23,6 +23,7 @@
             <MduiIcon Icon="widgets" Color="@Colors.Green.Primary" />
         </IconContent>
         <ChildContent>
+            <MduiNavMenuItem Href="avatars">头像</MduiNavMenuItem>
             <MduiNavMenuItem Href="buttons">按钮</MduiNavMenuItem>
             <MduiNavMenuItem Href="fabbuttons">浮动操作按钮</MduiNavMenuItem>
             <MduiNavMenuItem Href="textfield">文本框</MduiNavMenuItem>
