--- a/MduiBlazor/Components/Avatar/MduiAvatar.razor
+++ b/MduiBlazor/Components/Avatar/MduiAvatar.razor
@@ -1,4 +1,4 @@
-﻿@namespace MduiBlazor
+@namespace MduiBlazor
 @inherits MduiComponentBase
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
