--- a/mdui/src/index.less
+++ b/mdui/src/index.less
@@ -62,3 +62,4 @@
 @import './components/menu/index';
 @import './components/collapse/index';
 @import './components/layout/index';
+@import './components/avatar/index';
