--- a/MduiBlazor.Shared/Pages/Examples/Lists/IconAvatarList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/IconAvatarList.razor
@@ -1,20 +1,20 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
-        <MduiListAvatar>
+        <MduiAvatar>
             <MduiIcon Icon="folder" />
-        </MduiListAvatar>
+        </MduiAvatar>
         <MduiListContent>Photos</MduiListContent>
     </MduiListItem>
     <MduiListItem>
-        <MduiListAvatar>
+        <MduiAvatar>
             <MduiIcon Icon="folder" />
-        </MduiListAvatar>
+        </MduiAvatar>
         <MduiListContent>Recipes</MduiListContent>
     </MduiListItem>
     <MduiListItem>
-        <MduiListAvatar>
+        <MduiAvatar>
             <MduiIcon Icon="assignment" />
-        </MduiListAvatar>
+        </MduiAvatar>
         <MduiListContent>Work</MduiListContent>
     </MduiListItem>
 </MduiList>
