add badge component update to v8.0.7

--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -24,6 +24,7 @@
         </IconContent>
         <ChildContent>
             <MduiNavMenuItem Href="avatars">头像</MduiNavMenuItem>
+            <MduiNavMenuItem Href="badge">徽章</MduiNavMenuItem>
             <MduiNavMenuItem Href="buttons">按钮</MduiNavMenuItem>
             <MduiNavMenuItem Href="fabbuttons">浮动操作按钮</MduiNavMenuItem>
             <MduiNavMenuItem Href="textfield">文本框</MduiNavMenuItem>
