--- a/mdui/src/index.less
+++ b/mdui/src/index.less
@@ -63,3 +63,4 @@
 @import './components/collapse/index';
 @import './components/layout/index';
 @import './components/avatar/index';
+@import './components/badge/index';
