--- a/MduiBlazor.Shared/Pages/Examples/Avatars/IconAvatar.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Avatars/IconAvatar.razor
@@ -1,11 +1,9 @@
-<MduiRow>
-    <MduiAvatar Class="mdui-m-x-1">
-        <MduiIcon Icon="folder" />
-    </MduiAvatar>
-    <MduiAvatar Class="mdui-m-x-1 mdui-color-theme">
-        <MduiIcon Icon="assignment" />
-    </MduiAvatar>
-    <MduiAvatar Class="mdui-m-x-1">
-        <MduiIcon Color="@Colors.Theme.Primary" Icon="assignment" />
-    </MduiAvatar>
-</MduiRow>
+<MduiAvatar Class="mdui-m-a-1">
+    <MduiIcon Icon="folder" />
+</MduiAvatar>
+<MduiAvatar Class="mdui-m-a-1 mdui-color-theme">
+    <MduiIcon Icon="assignment" />
+</MduiAvatar>
+<MduiAvatar Class="mdui-m-a-1">
+    <MduiIcon Color="@Colors.Theme.Primary" Icon="assignment" />
+</MduiAvatar>
