--- a/MduiBlazor.Shared/Pages/Examples/Avatars/ImgAvatar.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Avatars/ImgAvatar.razor
@@ -1,5 +1,9 @@
-<MduiRow>
-    <MduiAvatar Class="mdui-m-x-1" ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
-    <MduiAvatar Class="mdui-m-x-1" ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
-    <MduiAvatar Class="mdui-m-x-1" ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
-</MduiRow>
+<MduiAvatar Class="mdui-m-a-1">
+    <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+</MduiAvatar>
+<MduiAvatar Class="mdui-m-a-1">
+    <img src="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
+</MduiAvatar>
+<MduiAvatar Class="mdui-m-a-1">
+    <img src="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
+</MduiAvatar>
