--- a/MduiBlazor.Shared/Pages/Examples/Avatars/LetterAvatar.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Avatars/LetterAvatar.razor
@@ -1,5 +1,3 @@
-<MduiRow>
-    <MduiAvatar Class="mdui-m-x-1">A</MduiAvatar>
-    <MduiAvatar Class="mdui-m-x-1 mdui-color-theme">B</MduiAvatar>
-    <MduiAvatar Class="mdui-m-x-1 mdui-text-color-theme">C</MduiAvatar>
-</MduiRow>
+<MduiAvatar Class="mdui-m-a-1">A</MduiAvatar>
+<MduiAvatar Class="mdui-m-a-1 mdui-color-theme">B</MduiAvatar>
+<MduiAvatar Class="mdui-m-a-1 mdui-text-color-theme">C</MduiAvatar>
