--- a/MduiBlazor.Shared/Pages/Examples/Lists/AnotherActiveList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/AnotherActiveList.razor
@@ -1,6 +1,8 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem Active>
-        <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        <MduiAvatar>
+            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        </MduiAvatar>
         <MduiListContent Title="Brendan Lim" TextLineSpan="@ListItemLineSpan.One">
             You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
             sleep. Other travelling salesmen live a life of luxury.
@@ -8,7 +10,9 @@
     </MduiListItem>
     <MduiDivider Inset Class="mdui-m-y-0" />
      <MduiListItem>
-         <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
+         <MduiAvatar>
+            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
+         </MduiAvatar>
          <MduiListContent Title="me, Scott, Jennifer" TextLineSpan="@ListItemLineSpan.One">
              You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
              sleep. Other travelling salesmen live a life of luxury.
@@ -16,7 +20,9 @@
      </MduiListItem>
      <MduiDivider Inset Class="mdui-m-y-0" />
      <MduiListItem>
-         <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
+         <MduiAvatar>
+            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
+         </MduiAvatar>
          <MduiListContent Title="me, Grace Ng" TextLineSpan="@ListItemLineSpan.One">
              You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
              sleep. Other travelling salesmen live a life of luxury.
