--- a/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList2.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList2.razor
@@ -1,11 +1,15 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
-        <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        <MduiAvatar>
+            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        </MduiAvatar>
         <MduiListContent>Inbox</MduiListContent>
         <MduiCheckbox Value />
     </MduiListItem>
     <MduiListItem>
-        <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        <MduiAvatar>
+            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        </MduiAvatar>
         <MduiListContent>Outbox</MduiListContent>
         <MduiCheckbox Value="@false" />
     </MduiListItem>
