--- a/MduiBlazor.Shared/Pages/Examples/Lists/AvatarList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/AvatarList.razor
@@ -1,18 +1,26 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
-        <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        <MduiAvatar>
+            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+        </MduiAvatar>
         <MduiListContent>Brendan Lim</MduiListContent>
     </MduiListItem>
     <MduiListItem>
-        <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
+        <MduiAvatar>
+            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
+        </MduiAvatar>
         <MduiListContent>me, Scott, Jennifer</MduiListContent>
     </MduiListItem>
     <MduiListItem>
-        <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
+        <MduiAvatar>
+            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
+        </MduiAvatar>
         <MduiListContent>Grace Ng</MduiListContent>
     </MduiListItem>
     <MduiListItem>
-        <MduiAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/5e010867ef986d05d625.jpg" />
+        <MduiAvatar>
+            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/5e010867ef986d05d625.jpg" />
+        </MduiAvatar>
         <MduiListContent>Kerem Suer</MduiListContent>
     </MduiListItem>
 </MduiList>
