--- a/MduiBlazor/Components/Avatar/MduiAvatar.razor
+++ b/MduiBlazor/Components/Avatar/MduiAvatar.razor
@@ -1,13 +1,6 @@
 @namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    @if (ChildContent is not null)
-    {
-        @ChildContent
-    }
-    else if (!string.IsNullOrWhiteSpace(ImgSrc))
-    {
-        <img src="@ImgSrc" />
-    }
-</div>
+<span class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
+    @ChildContent
+</span>
