fix update to v8.0.8

--- a/MduiBlazor.Shared/Pages/Examples/Lists/AvatarWithIconList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/AvatarWithIconList.razor
@@ -3,28 +3,28 @@
         <MduiAvatar>
             <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
         </MduiAvatar>
-        <MduiListContent>Brendan Lim</MduiListContent>
+        <MduiListItemContent>Brendan Lim</MduiListItemContent>
         <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
             <img src="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
         </MduiAvatar>
-        <MduiListContent>me, Scott, Jennifer</MduiListContent>
+        <MduiListItemContent>me, Scott, Jennifer</MduiListItemContent>
         <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
             <img src="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
         </MduiAvatar>
-        <MduiListContent>Grace Ng</MduiListContent>
+        <MduiListItemContent>Grace Ng</MduiListItemContent>
         <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
             <img src="https://cdn.w3cbus.com/mdui/docs~1/static/5e010867ef986d05d625.jpg" />
         </MduiAvatar>
-        <MduiListContent>Kerem Suer</MduiListContent>
+        <MduiListItemContent>Kerem Suer</MduiListItemContent>
         <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
 </MduiList>
