--- a/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList.razor
@@ -1,16 +1,16 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
         <MduiCheckbox Value />
-        <MduiListContent>Line item selected</MduiListContent>
+        <MduiListItemContent>Line item selected</MduiListItemContent>
         <MduiIcon Icon="move_to_inbox" />
     </MduiListItem>
     <MduiListItem>
         <MduiCheckbox Value="@false" />
-        <MduiListContent>Line item unselected</MduiListContent>
+        <MduiListItemContent>Line item unselected</MduiListItemContent>
         <MduiIcon Icon="send" />
     </MduiListItem>
     <MduiListItem>
         <MduiCheckbox Value />
-        <MduiListContent>Line item selected</MduiListContent>
+        <MduiListItemContent>Line item selected</MduiListItemContent>
     </MduiListItem>
 </MduiList>
