--- a/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList2.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList2.razor
@@ -3,19 +3,19 @@
         <MduiAvatar>
             <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
         </MduiAvatar>
-        <MduiListContent>Inbox</MduiListContent>
+        <MduiListItemContent>Inbox</MduiListItemContent>
         <MduiCheckbox Value />
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
             <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
         </MduiAvatar>
-        <MduiListContent>Outbox</MduiListContent>
+        <MduiListItemContent>Outbox</MduiListItemContent>
         <MduiCheckbox Value="@false" />
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar />
-        <MduiListContent>Trash</MduiListContent>
+        <MduiListItemContent>Trash</MduiListItemContent>
         <MduiCheckbox Value />
     </MduiListItem>
 </MduiList>
