--- a/MduiBlazor.Shared/Pages/Examples/Lists/ContactorList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/ContactorList.razor
@@ -1,29 +1,29 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
         <MduiIcon Icon="phone" Color="@Colors.Indigo.Primary" />
-        <MduiListContent Title="(650) 555-1234">
+        <MduiListItemContent Title="(650) 555-1234">
             Mobile
-        </MduiListContent>
+        </MduiListItemContent>
         <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
     <MduiListItem>
         <MduiIcon Icon="" />
-        <MduiListContent Title="(323) 555-6789">
+        <MduiListItemContent Title="(323) 555-6789">
             Work
-        </MduiListContent>
+        </MduiListItemContent>
         <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
     <MduiDivider />
     <MduiListItem>
         <MduiIcon Icon="email" Color="@Colors.Indigo.Primary" />
-        <MduiListContent Title="aliconnors@example.com">
+        <MduiListItemContent Title="aliconnors@example.com">
             Personal
-        </MduiListContent>
+        </MduiListItemContent>
     </MduiListItem>
     <MduiListItem>
         <MduiIcon Icon="" />
-        <MduiListContent Title="ali_connors@example.com">
+        <MduiListItemContent Title="ali_connors@example.com">
             Work
-        </MduiListContent>
+        </MduiListItemContent>
     </MduiListItem>
 </MduiList>
