--- a/MduiBlazor.Shared/Pages/Examples/Lists/FilesList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/FilesList.razor
@@ -4,27 +4,27 @@
         <MduiAvatar>
             <MduiIcon Icon="folder" />
         </MduiAvatar>
-        <MduiListContent Title="Photos">
+        <MduiListItemContent Title="Photos">
             Jan 9, 2014
-        </MduiListContent>
+        </MduiListItemContent>
         <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
             <MduiIcon Icon="folder" />
         </MduiAvatar>
-        <MduiListContent Title="Recipes">
+        <MduiListItemContent Title="Recipes">
             Jan 17, 2014
-        </MduiListContent>
+        </MduiListItemContent>
         <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
             <MduiIcon Icon="folder" />
         </MduiAvatar>
-        <MduiListContent Title="Work">
+        <MduiListItemContent Title="Work">
             Jan 28, 2014
-        </MduiListContent>
+        </MduiListItemContent>
         <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiSubheader Inset>Files</MduiSubheader>
@@ -32,18 +32,18 @@
         <MduiAvatar Class="mdui-color-blue mdui-text-color-white">
             <MduiIcon Icon="assignment" />
         </MduiAvatar>
-        <MduiListContent Title="Photos">
+        <MduiListItemContent Title="Photos">
             Jan 9, 2014
-        </MduiListContent>
+        </MduiListItemContent>
         <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar Class="mdui-color-yellow-600 mdui-text-color-white">
             <MduiIcon Icon="assignment" />
         </MduiAvatar>
-        <MduiListContent Title="Kitchen remodel">
+        <MduiListItemContent Title="Kitchen remodel">
             Jan 10, 2014
-        </MduiListContent>
+        </MduiListItemContent>
         <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
 </MduiList>
