--- a/MduiBlazor.Shared/Pages/Examples/Lists/IconAvatarList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/IconAvatarList.razor
@@ -3,18 +3,18 @@
         <MduiAvatar>
             <MduiIcon Icon="folder" />
         </MduiAvatar>
-        <MduiListContent>Photos</MduiListContent>
+        <MduiListItemContent>Photos</MduiListItemContent>
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
             <MduiIcon Icon="folder" />
         </MduiAvatar>
-        <MduiListContent>Recipes</MduiListContent>
+        <MduiListItemContent>Recipes</MduiListItemContent>
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
             <MduiIcon Icon="assignment" />
         </MduiAvatar>
-        <MduiListContent>Work</MduiListContent>
+        <MduiListItemContent>Work</MduiListItemContent>
     </MduiListItem>
 </MduiList>
