--- a/MduiBlazor.Shared/Pages/Examples/Lists/RightAvatarList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/RightAvatarList.razor
@@ -1,24 +1,24 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
-        <MduiListContent>Brendan Lim</MduiListContent>
+        <MduiListItemContent>Brendan Lim</MduiListItemContent>
         <MduiAvatar>
             <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
         </MduiAvatar>
     </MduiListItem>
     <MduiListItem>
-        <MduiListContent>me, Scott, Jennifer</MduiListContent>
+        <MduiListItemContent>me, Scott, Jennifer</MduiListItemContent>
         <MduiAvatar>
             <img src="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
         </MduiAvatar>
     </MduiListItem>
     <MduiListItem>
-        <MduiListContent>Grace Ng</MduiListContent>
+        <MduiListItemContent>Grace Ng</MduiListItemContent>
         <MduiAvatar>
             <img src="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
         </MduiAvatar>
     </MduiListItem>
     <MduiListItem>
-        <MduiListContent>Kerem Suer</MduiListContent>
+        <MduiListItemContent>Kerem Suer</MduiListItemContent>
         <MduiAvatar>
             <img src="https://cdn.w3cbus.com/mdui/docs~1/static/5e010867ef986d05d625.jpg" />
         </MduiAvatar>
