--- a/MduiBlazor.Shared/Pages/Examples/Lists/RightIconList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/RightIconList.razor
@@ -1,18 +1,18 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
-        <MduiListContent>Inbox</MduiListContent>
+        <MduiListItemContent>Inbox</MduiListItemContent>
         <MduiIcon Icon="move_to_inbox" />
     </MduiListItem>
     <MduiListItem>
-        <MduiListContent>Outbox</MduiListContent>
+        <MduiListItemContent>Outbox</MduiListItemContent>
         <MduiIcon Icon="send" />
     </MduiListItem>
     <MduiListItem>
-        <MduiListContent>Trash</MduiListContent>
+        <MduiListItemContent>Trash</MduiListItemContent>
         <MduiIcon Icon="delete" />
     </MduiListItem>
     <MduiListItem>
-        <MduiListContent>Spam</MduiListContent>
+        <MduiListItemContent>Spam</MduiListItemContent>
         <MduiIcon Icon="error" />
     </MduiListItem>
 </MduiList>
