--- a/MduiBlazor.Shared/Pages/Examples/Lists/SwitchList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/SwitchList.razor
@@ -1,12 +1,12 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
         <MduiIcon Icon="network_wifi" />
-        <MduiListContent>Wi-Fi</MduiListContent>
+        <MduiListItemContent>Wi-Fi</MduiListItemContent>
         <MduiCheckbox Switch Value="@true" />
     </MduiListItem>
     <MduiListItem>
         <MduiIcon Icon="bluetooth" />
-        <MduiListContent>Bluetooth</MduiListContent>
+        <MduiListItemContent>Bluetooth</MduiListItemContent>
         <MduiCheckbox Switch />
     </MduiListItem>
     <MduiListItem Title="Data usage" Icon="data_usage" />
