--- a/MduiBlazor.Shared/Pages/ListPage.razor
+++ b/MduiBlazor.Shared/Pages/ListPage.razor
@@ -276,7 +276,7 @@
                  </tr>
                  <tr>
                      <td rowspan="3">
-                         <code>MduiListContent</code>
+                         <code>MduiListItemContent</code>
                      </td>
                      <td>
                          <code>Title</code>
