--- a/MduiBlazor/Components/List/MduiListItem.razor
+++ b/MduiBlazor/Components/List/MduiListItem.razor
@@ -16,6 +16,6 @@
         {
             <MduiIcon Icon="@Icon" />
         }
-        <MduiListContent Title="@Title" />
+        <MduiListItemContent Title="@Title" />
     }
 </li>
