--- a/MduiBlazor.Shared/Pages/Examples/Lists/MultiRowList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/MultiRowList.razor
@@ -1,14 +1,14 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
-        <MduiListContent Title="Multiline item" TextLineSpan="@ListItemLineSpan.Two">
+        <MduiListItemContent Title="Multiline item" TextLineSpan="@ListItemLineSpan.Two">
             You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
             sleep. Other travelling salesmen live a life of luxury.
-        </MduiListContent>
+        </MduiListItemContent>
     </MduiListItem>
     <MduiListItem>
-        <MduiListContent Title="Multiline item" TextLineSpan="@ListItemLineSpan.Three">
+        <MduiListItemContent Title="Multiline item" TextLineSpan="@ListItemLineSpan.Three">
             You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
             sleep. Other travelling salesmen live a life of luxury.
-        </MduiListContent>
+        </MduiListItemContent>
     </MduiListItem>
 </MduiList>
