--- a/MduiBlazor.Shared/Pages/AvatarsPage.razor
+++ b/MduiBlazor.Shared/Pages/AvatarsPage.razor
@@ -50,21 +50,12 @@
             <tbody>
                 <tr>
                     <td>
-                        <code>ImgSrc</code>
-                    </td>
-                    <td>
-                        <code>string?</code>
-                    </td>
-                    <td>组件图像源地址。</td>
-                </tr>
-                <tr>
-                    <td>
                         <code>ChildContent</code>
                     </td>
                     <td>
                         <code>RenderFragment</code>
                     </td>
-                    <td>自定义头像内容。</td>
+                    <td>头像内容。</td>
                 </tr>
             </tbody>
         </MduiSimpleTable>
