--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -13727,6 +13727,7 @@ select.mdui-select[multiple] option:last-child {
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
 }
 .mdui-layout-content {
   -webkit-box-flex: 1;
