add treeview component

--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -48,6 +48,7 @@
             <MduiNavMenuItem Href="menus">菜单</MduiNavMenuItem>
             <MduiNavMenuItem Href="tables">表格</MduiNavMenuItem>
             <MduiNavMenuItem Href="pagination">分页</MduiNavMenuItem>
+            <MduiNavMenuItem Href="treeview">树形组件</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
     <MduiNavMenuCollapse Title="资源">
