--- a/mdui/src/components/collapse/index.less
+++ b/mdui/src/components/collapse/index.less
@@ -5,6 +5,9 @@
  */
 
 .mdui-collapse-item-header {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
 
     // 图标，打开时翻转 180 度
     .mdui-collapse-item-arrow,
