--- a/mdui/src/index.less
+++ b/mdui/src/index.less
@@ -64,3 +64,4 @@
 @import './components/layout/index';
 @import './components/avatar/index';
 @import './components/badge/index';
+@import './components/treeview/index';
