--- a/MduiBlazor.Shared/Pages/TablesPage.razor
+++ b/MduiBlazor.Shared/Pages/TablesPage.razor
@@ -136,7 +136,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <code>HeadContent</code>
+                        <code>HeaderContent</code>
                     </td>
                     <td>
                         <code>RenderFragment?</code>
