--- a/MduiBlazor.Shared/Pages/Examples/Tables/SelectableTable.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Tables/SelectableTable.razor
@@ -3,17 +3,11 @@
 
 <MduiTableContainer>
     <MduiTable MultiSelection Items="@forecasts" @bind-SelectedItems="@selectedForecasts">
-        <HeadContent>
-            <MduiTh>Date</MduiTh>
-            <MduiTh>TemperatureC</MduiTh>
-            <MduiTh>TemperatureF</MduiTh>
-            <MduiTh>Summary</MduiTh>
-        </HeadContent>
         <Columns>
-            <MduiColumn>@context.Date.ToString("yyyy-MM-dd")</MduiColumn>
-            <MduiColumn>@context.TemperatureC</MduiColumn>
-            <MduiColumn>@context.TemperatureF</MduiColumn>
-            <MduiColumn>@context.Summary</MduiColumn>
+            <MduiColumn Title="Date">@context.Date.ToString("yyyy-MM-dd")</MduiColumn>
+            <MduiColumn Title="TemperatureC">@context.TemperatureC</MduiColumn>
+            <MduiColumn Title="TemperatureF">@context.TemperatureF</MduiColumn>
+            <MduiColumn Title="Summary">@context.Summary</MduiColumn>
         </Columns>
     </MduiTable>
 </MduiTableContainer>
