update chip component

--- a/MduiBlazor/Components/Chip/MduiChip.razor
+++ b/MduiBlazor/Components/Chip/MduiChip.razor
@@ -26,7 +26,7 @@
     <span class="mdui-chip-title">@Title</span>
     @if (DeleteButton)
     {
-        <span class="mdui-chip-delete" @onclick="@OnDeleteButtonClicked">
+        <span class="mdui-chip-delete" @onclick="@OnClickedDeleteButton">
             <MduiIcon Icon="cancel" />
         </span>
     }
