--- a/MduiBlazor.Shared/Pages/GridPage.razor
+++ b/MduiBlazor.Shared/Pages/GridPage.razor
@@ -11,8 +11,8 @@
 <PageContent>
     <PageContentItem Title="容器" OnClick="@(_=>ScrollToElementById("container"))" />
     <PageContentItem Title="网格" OnClick="@(_=>ScrollToElementById("grid"))">
-        <PageContentItem Title="基础网格" OnClick="@(_=>ScrollToElementById("response"))" />
-        <PageContentItem Title="响应式网格" OnClick="@(_=>ScrollToElementById("text"))" />
+        <PageContentItem Title="基础网格" OnClick="@(_=>ScrollToElementById("simple"))" />
+        <PageContentItem Title="响应式网格" OnClick="@(_=>ScrollToElementById("response"))" />
         <PageContentItem Title="列间距" OnClick="@(_=>ScrollToElementById("colgapless"))" />
         <PageContentItem Title="列偏移" OnClick="@(_=>ScrollToElementById("coloffset"))" />
         <PageContentItem Title="嵌套列" OnClick="@(_=>ScrollToElementById("nest"))" />
