update input and add picker component

--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -49,6 +49,7 @@
             <MduiNavMenuItem Href="tables">表格</MduiNavMenuItem>
             <MduiNavMenuItem Href="pagination">分页</MduiNavMenuItem>
             <MduiNavMenuItem Href="treeview">树形组件</MduiNavMenuItem>
+            <MduiNavMenuItem Href="picker">通用选择器</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
     <MduiNavMenuCollapse Title="资源">
