--- a/MduiBlazor/Components/Input/MduiExpandableTextField.razor
+++ b/MduiBlazor/Components/Input/MduiExpandableTextField.razor
@@ -2,7 +2,7 @@
 @inherits MduiInputBase<string>
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    <MduiIconButton Class="mdui-textfield-icon" DisableRipple OnClick="@ToggleAsync">
+    <MduiIconButton Class="mdui-field-icon" DisableRipple OnClick="@ToggleAsync">
         @if (IconContent is not null)
         {
             @IconContent
@@ -12,10 +12,10 @@
             <MduiIcon Icon="@Icon" />
         }
     </MduiIconButton>
-    <input @ref="@Element" class="mdui-textfield-input" type="@Type" pattern="@Pattern" maxlength="@MaxLength"
+    <input @ref="@Element" class="mdui-input" type="@Type" pattern="@Pattern" maxlength="@MaxLength"
         placeholder="@Placeholder" disabled="@Disabled" readonly="@Readonly"
         value="@BindConverter.FormatValue(CurrentValueAsString)"
     @onchange="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
-    @onfocus="@OnFocus" @onblur="@OnBlur" />
-    <MduiIconButton DisableRipple Class="mdui-textfield-close" Icon="close" OnClick="@ToggleAsync" />
+    @onfocus="@OnInputFocus" @onblur="@OnInputBlur" />
+    <MduiIconButton DisableRipple Class="mdui-field-close" Icon="close" OnClick="@ToggleAsync" />
  </div>
