--- a/MduiBlazor/Components/Input/MduiSlider.razor
+++ b/MduiBlazor/Components/Input/MduiSlider.razor
@@ -7,7 +7,7 @@
         readonly="@Readonly" disabled="@Disabled" @attributes="@AdditionalAttributes"
         value="@BindConverter.FormatValue(CurrentValueAsString)"
         @oninput="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
-        @onblur="@OnBlur" @ontouchstart="@Active" @ontouchend="@Disactive" @onmousedown="@Active"
+        @onfocus="@OnFocus" @onblur="@OnInputBlur" @ontouchstart="@Active" @ontouchend="@Disactive" @onmousedown="@Active"
         @onmouseup="@Disactive" />
     <span class="mdui-slider-track" style="width:100%;"></span>
     <span class="mdui-slider-fill" style="@FillStyle"></span>
