--- a/MduiBlazor/Components/Input/MduiTextField.razor
+++ b/MduiBlazor/Components/Input/MduiTextField.razor
@@ -2,7 +2,7 @@
 @inherits MduiComponentBase
 
 <MduiField @ref="@_field" Class="@Classname" Style="@Style" AdditionalAttributes="@AdditionalAttributes"
-       Disabled="@Disabled" Label="@Label" Icon="@Icon" IconContent="@IconContent" HelperText="@HelperText" ErrorText="@ErrorText"
+       Label="@Label" Icon="@Icon" IconContent="@IconContent" HelperText="@HelperText" ErrorText="@ErrorText"
        UseMduiTypo="@UseMduiTypo">
        <MduiInputText @ref="@_input" Value="@Value" ValueChanged="@OnValueChanged" ValueExpression="@ValueExpression" Name="@Name" Type="@Type" AutoFocus="@AutoFocus" Disabled="@Disabled" MaxLength="@MaxLength" Pattern="@Pattern" Placeholder="@Placeholder" OnInput="@OnInput" Readonly="@Readonly" Required="@Required" Rows="@Rows"
               Trim="@Trim" />
