--- a/mdui/src/components/table/index.less
+++ b/mdui/src/components/table/index.less
@@ -4,7 +4,7 @@
  * =============================================================================
  */
 
-@import '../selection_control/checkbox';
+@import '../input/checkbox';
 
 .mdui-table {
   position: relative;
