--- a/mdui/src/index.less
+++ b/mdui/src/index.less
@@ -36,14 +36,16 @@
 @import './components/table/index';
 @import './components/divider/index';
 @import './components/ripple/index';
-@import './components/textfield/index';
-@import './components/selection_control/checkbox';
-@import './components/selection_control/radio';
-@import './components/selection_control/switch';
-@import './components/slider/index';
+@import './components/input/checkbox';
+@import './components/input/field';
+@import './components/input/index';
+@import './components/input/picker';
+@import './components/input/radio';
+@import './components/input/select';
+@import './components/input/slider';
+@import './components/input/switch';
 @import './components/button/index';
 @import './components/fab/index';
-@import './components/select/index';
 @import './components/toolbar/index';
 @import './components/tooltip/index';
 @import './components/appbar/index';
