--- a/MduiBlazor/Components/Input/MduiDateTime.razor
+++ b/MduiBlazor/Components/Input/MduiDateTime.razor
@@ -7,4 +7,4 @@
     required="@Required" pattern="@Pattern" disabled="@Disabled" readonly="@Readonly"
     @attributes="@AdditionalAttributes" value="@FormatDateValueAsString()"
     @onchange="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
-    @onfocus="@OnFocus" @onblur="@OnBlur" />
+    @onfocus="@OnInputFocus" @onblur="@OnInputBlur" />
