--- a/MduiBlazor/Components/Input/MduiNumbericField.razor
+++ b/MduiBlazor/Components/Input/MduiNumbericField.razor
@@ -2,8 +2,8 @@
 @inherits MduiComponentBase
 @typeparam TValue
 
-<MduiField Class="@Classname" Style="@Style" AdditionalAttributes="@AdditionalAttributes" Disabled="@Disabled"
-    Label="@Label" Icon="@Icon" HelperText="@HelperText" ErrorText="@ErrorText" UseMduiTypo="@UseMduiTypo">
+<MduiField Class="@Classname" Style="@Style" AdditionalAttributes="@AdditionalAttributes" Label="@Label" Icon="@Icon"
+    HelperText="@HelperText" ErrorText="@ErrorText" UseMduiTypo="@UseMduiTypo">
     <MduiInputNumber @ref="@_input" TValue="@TValue" Value="@Value" ValueChanged="@OnValueChanged"
         ValueExpression="@ValueExpression" Name="@Name" AutoFocus="@AutoFocus" Disabled="@Disabled" Step="@Step"
         Min="@Min" Max="@Max" Placeholder="@Placeholder" Readonly="@Readonly" Required="@Required" />
