--- a/MduiBlazor/Components/Input/MduiSelect.razor
+++ b/MduiBlazor/Components/Input/MduiSelect.razor
@@ -5,6 +5,6 @@
 <select class="@Classname" style="@Style" name="@Name" disabled="@Disabled" required="@Required"
     @attributes="@AdditionalAttributes" value="@CurrentValueAsString"
     @onchange="@(EventCallback.Factory.CreateBinder<string?>(this,__value=>CurrentValueAsString=__value,default))"
-    @onfocus="@OnFocus" @onblur="@OnBlur">
+    @onfocus="@OnInputFocus" @onblur="@OnInputBlur">
     @ChildContent
 </select>
