--- a/mdui/src/components/input/field.less
+++ b/mdui/src/components/input/field.less
@@ -1,65 +1,21 @@
 /**
  * =============================================================================
- * ************   Text Field 文本框   ************
+ * ************   Input Field   ************
  * =============================================================================
  */
 
 /* 文本框外层 */
-.mdui-textfield {
+.mdui-field {
   position: relative;
   padding: 16px 1px 8px;
-  overflow: hidden;
 }
 
-.mdui-textfield-has-bottom {
+.mdui-field-has-bottom {
   padding-bottom: 28px;
 }
 
-/* 输入框 */
-.mdui-textfield-input {
-  display: block;
-  box-sizing: border-box;
-  width: 100%;
-  height: 36px;
-  margin: 0;
-  padding: 8px 0;
-  overflow: hidden;
-  color: rgba(0, 0, 0, 0.87);
-  font-size: 16px;
-  font-family: inherit;
-  line-height: 20px;
-  background: none;
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .42);
-  border-radius: 0;
-  outline: none;
-  box-shadow: none;
-  transition-timing-function: @animation-curve-default;
-  transition-duration: .2s;
-  transition-property: border-bottom-color, padding-right, box-shadow;
-  appearance: none;
-  resize: none;
-
-  &::-webkit-input-placeholder {
-    color: inherit;
-    opacity: 0.42;
-  }
-
-  &:not([disabled]):hover {
-    border-bottom: 1px solid rgba(0, 0, 0, .87);
-    box-shadow: 0 1px 0 0 rgba(0, 0, 0, .87);
-    cursor: pointer;
-  }
-
-  &[rows] {
-    height: auto !important;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-  }
-}
-
 /* 文本框 label */
-.mdui-textfield-label {
+.mdui-field-label {
   display: block;
   width: 100%;
   color: rgba(0, 0, 0, 0.54);
@@ -71,8 +27,8 @@
 }
 
 /* 表单验证错误提示、帮助文本提示 */
-.mdui-textfield-error,
-.mdui-textfield-helper {
+.mdui-field-error,
+.mdui-field-helper {
   position: absolute;
   bottom: 8px;
   height: 12px;
@@ -81,30 +37,30 @@
   .mdui-text-truncate();
 }
 
-.mdui-textfield-error {
+.mdui-field-error {
   color: rgba(red(@color-red-a400), green(@color-red-a400), blue(@color-red-a400), .87);
   visibility: hidden;
 }
 
-.mdui-textfield-helper {
+.mdui-field-helper {
   color: rgba(0, 0, 0, 0.54);
 }
 
 
 /* 表单中的图标
    ========== */
-.mdui-textfield {
-  .mdui-icon {
+.mdui-field {
+  &>.mdui-icon {
     position: absolute;
     bottom: 8px;
     padding: 6px;
     color: @color-black-icon;
 
-    ~.mdui-textfield-label,
-    ~.mdui-textfield-input,
-    ~.mdui-textfield-error,
-    ~.mdui-textfield-helper,
-    ~.mdui-textfield-flex-wrap {
+    ~.mdui-input,
+    ~.mdui-field-label,
+    ~.mdui-field-error,
+    ~.mdui-field-helper,
+    ~.mdui-field-flex-wrap {
       /* stylelint-disable-next-line */
       width: calc(~"100% - 56px");
       margin-left: 56px;
@@ -112,7 +68,7 @@
   }
 }
 
-.mdui-textfield-has-bottom {
+.mdui-field-has-bottom {
   .mdui-icon {
     bottom: 28px;
   }
@@ -120,42 +76,37 @@
 
 /* 聚焦状态的文本框
    ============= */
-.mdui-textfield-input:focus {
-  border-bottom-color: @color-default-a700;
-  box-shadow: 0 1px 0 0 @color-default-a700;
-}
+.mdui-field-focus {
 
-.mdui-textfield-focus {
-
-  .mdui-textfield-label,
-  .mdui-icon {
+  .mdui-field-label,
+  &>.mdui-icon {
     color: rgba(red(@color-default-a700), green(@color-default-a700), blue(@color-default-a700), .87);
   }
 }
 
 /* 含有浮动标签的文本框
    ================ */
-.mdui-textfield-floating-label {
+.mdui-field-floating-label {
 
-  .mdui-textfield-input:not(:focus)::-webkit-input-placeholder {
+  .mdui-input:not(:focus)::-webkit-input-placeholder {
     visibility: hidden;
   }
 
-  .mdui-textfield-label {
+  .mdui-field-label {
     color: rgba(0, 0, 0, 0.35);
     transform: scale(1) translateY(27px);
   }
 
-  &.mdui-textfield-focus,
-  &.mdui-textfield-not-empty {
-    .mdui-textfield-label {
+  &.mdui-field-focus,
+  &.mdui-field-not-empty {
+    .mdui-field-label {
       color: rgba(0, 0, 0, 0.65);
       transform: scale(0.75) translateY(0);
     }
   }
 
-  &.mdui-textfield-focus {
-    .mdui-textfield-label {
+  &.mdui-field-focus {
+    .mdui-field-label {
       .mdui-text-color(@color-accent-default-name);
     }
   }
@@ -163,45 +114,47 @@
 
 /* 可展开文本框，默认向右展开
    ========== */
-.mdui-textfield-expandable {
+.mdui-field-expandable {
   width: 36px;
   min-height: 36px;
   padding: 1px 0;
   transition: width .3s @animation-curve-default;
 
-  .mdui-icon {
-    bottom: 0;
-    padding: 0;
+  .mdui-field-close {
+    .mdui-icon {
+      bottom: 0;
+      padding: 0;
+    }
   }
 
-  .mdui-textfield-input {
+  .mdui-input {
     /* stylelint-disable-next-line */
     width: calc(~"100% - 36px");
     margin-left: 36px;
     padding-right: 0;
   }
 
-  .mdui-textfield-icon {
+  .mdui-field-icon {
     position: absolute;
     top: 0;
     left: 0;
   }
 
-  .mdui-textfield-close {
+  .mdui-field-close {
     position: absolute;
     top: 0;
     right: 0;
     transform: scale(0);
   }
 
-  &.mdui-textfield-expanded {
+  &.mdui-field-expanded {
     width: 100%;
 
-    .mdui-textfield-input {
+    .mdui-input {
       padding-right: 36px;
     }
 
-    .mdui-textfield-close {
+    .mdui-field-close {
       transform: scale(1);
     }
   }
@@ -209,36 +162,35 @@
 
 /* 表单验证不通过
    =========== */
-.mdui-textfield-invalid,
-.mdui-textfield-invalid-html5 {
+.mdui-field-invalid,
+.mdui-field-invalid-html5 {
 
-  .mdui-textfield-input,
-  &.mdui-textfield-focus .mdui-textfield-input {
+  .mdui-input {
     border-bottom-color: @color-red-a400 !important;
     box-shadow: 0 1px 0 0 @color-red-a400 !important;
   }
 
-  .mdui-textfield-label {
+  .mdui-field-label {
     color: @color-red-a400 !important;
   }
 
-  &.mdui-textfield-floating-label {
-    .mdui-textfield-label {
+  &.mdui-field-floating-label {
+    .mdui-field-label {
       color: rgba(red(@color-red-a400), green(@color-red-a400), blue(@color-red-a400), 0.35) !important;
     }
 
-    &.mdui-textfield-focus,
-    &.mdui-textfield-not-empty {
-      .mdui-textfield-label {
+    &.mdui-field-focus,
+    &.mdui-field-not-empty {
+      .mdui-field-label {
         color: @color-red-a400 !important;
       }
     }
   }
 
-  .mdui-textfield-error {
+  .mdui-field-error {
     visibility: visible;
 
-    &+.mdui-textfield-helper {
+    &+.mdui-field-helper {
       visibility: hidden;
     }
   }
@@ -246,26 +198,15 @@
 
 /* 禁用表单
    ====== */
-.mdui-textfield-disabled {
-
-  .mdui-textfield-label,
-  .mdui-textfield-input::-webkit-input-placeholder {
+.mdui-field-disabled {
+  .mdui-field-label {
     color: @color-black-disabled;
-  }
-
-  .mdui-textfield-input {
-    color: rgba(0, 0, 0, .42);
-    cursor: default;
-  }
-
-  .mdui-textfield-input {
-    border-bottom: 1px dashed rgba(0, 0, 0, .42);
   }
 }
 
 /* 字数统计
    ====== */
-.mdui-textfield-counter {
+.mdui-field-counter {
   position: absolute;
   right: 8px;
   bottom: 8px;
@@ -283,81 +224,51 @@
  */
 .layout-theme({
 
-  // 输入框颜色
-  .mdui-textfield-input {
-    color: #fff;
-    border-bottom-color: rgba(255, 255, 255, .7);
-
-    &::-webkit-input-placeholder {
-      color: rgba(255, 255, 255, .5);
-    }
-
-    &:not([disabled]):hover {
-      border-bottom-color: rgba(255, 255, 255, 1);
-      box-shadow: 0 1px 0 0 rgba(255, 255, 255, 1);
-    }
-  }
-
   // 图标颜色
-  .mdui-textfield {
+  .mdui-field {
     .mdui-icon {
       color: rgba(255, 255, 255, 0.7);
     }
   }
 
   // 标签颜色
-  .mdui-textfield-label {
+  .mdui-field-label {
     color: rgba(255, 255, 255, 0.7);
   }
 
-  .mdui-textfield-floating-label {
-    .mdui-textfield-label {
+  .mdui-field-floating-label {
+    .mdui-field-label {
       color: rgba(255, 255, 255, 0.35);
     }
   }
 
   // 错误文本颜色
-  .mdui-textfield-error {
+  .mdui-field-error {
     color: @color-red-a400;
   }
 
   // 帮助文本颜色
-  .mdui-textfield-helper {
+  .mdui-field-helper {
     color: rgba(255, 255, 255, 0.7);
   }
 
   // 字数统计颜色
-  .mdui-textfield-counter {
+  .mdui-field-counter {
     color: @color-white-secondary;
   }
 
   // 聚焦状态
-  .mdui-textfield-input:focus {
-    border-bottom-color: @color-default-a200;
-    box-shadow: 0 1px 0 0 @color-default-a200;
-  }
+  .mdui-field-focus {
 
-  .mdui-textfield-focus {
-
-    .mdui-textfield-label {
+    .mdui-field-label {
       color: @color-default-a200;
     }
   }
 
   // 禁用状态
-  .mdui-textfield-disabled {
-
-    .mdui-textfield-label,
-    .mdui-textfield-input::-webkit-input-placeholder {
+  .mdui-field-disabled {
+    .mdui-field-label {
       color: @color-white-disabled;
-    }
-
-    .mdui-textfield-input {
-      color: @color-white-disabled;
-    }
-
-    .mdui-textfield-input {
-      border-bottom-color: rgba(255, 255, 255, .7);
     }
   }
 });
@@ -378,16 +289,10 @@
       @colorA700: 'color-@{colorName}-a700';
       @colorA200: 'color-@{colorName}-a200';
 
-      .mdui-textfield-input:focus {
-        border-bottom-color: @@colorA700;
-        box-shadow: 0 1px 0 0 @@colorA700;
-      }
+      .mdui-field-focus {
 
-      .mdui-textfield-focus {
-
-        .mdui-textfield-label,
-        .mdui-textfield-floating-label.mdui-textfield-focus .mdui-textfield-label,
-        .mdui-icon {
+        .mdui-field-label,
+        &>.mdui-icon {
           color: rgba(red(@@colorA700), green(@@colorA700), blue(@@colorA700), .87);
         }
       }
@@ -396,16 +301,10 @@
       & {
         .dark-mode() {
 
-          .mdui-textfield-input:focus {
-            border-bottom-color: @@colorA200;
-            box-shadow: 0 1px 0 0 @@colorA200;
-          }
+          .mdui-field-focus {
 
-          .mdui-textfield-focus {
-
-            .mdui-textfield-label,
-            .mdui-textfield-floating-label.mdui-textfield-focus .mdui-textfield-label,
-            .mdui-icon {
+            .mdui-field-label,
+            &>.mdui-icon {
               color: @@colorA200;
             }
           }
