--- a/mdui/src/components/treeview/index.less
+++ b/mdui/src/components/treeview/index.less
@@ -4,7 +4,7 @@
  * =============================================================================
  */
 @import '../collapse/index';
-@import '../selection_control/checkbox';
+@import '../input/checkbox';
 
 .mdui-treeview {
   width: 100%;
