--- a/MduiBlazor/Components/Picker/MduiPicker.razor
+++ b/MduiBlazor/Components/Picker/MduiPicker.razor
@@ -4,8 +4,8 @@
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <MduiInputText Name="@Name" Value="@DisplayValue" Readonly="@_readonly" Disabled="@Disabled"
-        DisplayName="@DisplayName" AutoFocus="@AutoFocus" Required="@Required" OnInput="@OnInput"
-        OnFocus="@OnPickerFocus" />
+        Placeholder="@Placeholder" DisplayName="@DisplayName" AutoFocus="@AutoFocus" Required="@Required"
+        OnInput="@OnInput" OnFocus="@OnPickerFocus" />
     <ul class="@ContentClassname" style="@ContentStylelist">
         <CascadingValue Value="@this" IsFixed>
             @ChildContent
